<?xml version="1.0" encoding="utf-8"?>
<com.cyngn.keyguard.KeyguardWidgetFrame xmlns:android="http://schemas.android.com/apk/res/com.cyngn.keyguard" androidprv:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:id="@+id/keyguard_status_view" androidprv:layout_width="match_parent" androidprv:layout_height="match_parent" androidprv:layout_maxHeight="UNKNOWN_DATA_0x7f0c0022" androidprv:layout_maxWidth="@dimen/keyguard_security_width">
    <com.cyngn.keyguard.KeyguardStatusView androidprv:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:orientation="vertical" androidprv:id="@+id/keyguard_status_view_face_palm" androidprv:layout_width="match_parent" androidprv:layout_height="match_parent" androidprv:contentDescription="@string/keyguard_accessibility_status">
        <LinearLayout androidprv:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:orientation="vertical" androidprv:focusable="true" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content">
            <TextClock androidprv:textColor="@color/clock_white" androidprv:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" androidprv:id="@+id/clock_view" androidprv:layout_width="wrap_content" androidprv:layout_height="wrap_content" androidprv:layout_marginBottom="@dimen/bottom_text_spacing_digital" androidprv:baselineAligned="true" androidprv:singleLine="true" androidprv:format12Hour="@string/keyguard_widget_12_hours_format" androidprv:format24Hour="@string/keyguard_widget_24_hours_format" style="@style/widget_big_thin" />
            <include layout="@layout/keyguard_status_area" />
        </LinearLayout>
    </com.cyngn.keyguard.KeyguardStatusView>
</com.cyngn.keyguard.KeyguardWidgetFrame>
