<?xml version="1.0" encoding="utf-8"?>
<com.cyngn.keyguard.KeyguardAccountView xmlns:android="http://schemas.android.com/apk/res/com.cyngn.keyguard" androidprv:orientation="vertical" androidprv:id="@+id/keyguard_account_view" androidprv:layout_width="match_parent" androidprv:layout_height="match_parent" androidprv:layout_maxHeight="UNKNOWN_DATA_0x7f0c0023" androidprv:layout_maxWidth="@dimen/keyguard_security_width">
    <include androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" layout="@layout/keyguard_message_area" />
    <RelativeLayout androidprv:layout_width="match_parent" androidprv:layout_height="UNKNOWN_DATA_0x1" androidprv:layout_weight="1.0">
        <EditText androidprv:id="@+id/login" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" androidprv:layout_marginTop="8dp" androidprv:hint="@string/kg_login_username_hint" androidprv:layout_alignParentTop="true" androidprv:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" androidprv:layout_marginStart="7dp" androidprv:layout_marginEnd="7dp" />
        <EditText androidprv:id="@+id/password" androidprv:nextFocusRight="@+id/ok" androidprv:nextFocusDown="@+id/ok" androidprv:layout_width="match_parent" androidprv:layout_height="wrap_content" androidprv:layout_marginTop="15dp" androidprv:hint="@string/kg_login_password_hint" androidprv:layout_toLeftOf="@+id/ok" androidprv:layout_below="@+id/login" androidprv:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" androidprv:layout_marginStart="7dp" androidprv:layout_marginEnd="7dp" />
        <Button androidprv:id="@+id/ok" androidprv:layout_width="wrap_content" androidprv:layout_height="wrap_content" androidprv:layout_margin="7dp" androidprv:text="@string/kg_login_submit_button" androidprv:layout_below="@+id/login" androidprv:layout_alignParentEnd="true" />
    </RelativeLayout>
</com.cyngn.keyguard.KeyguardAccountView>
