<?xml version="1.0" encoding="utf-8"?>
<com.cyngn.keyguard.KeyguardTransportControlView xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/keyguard_transport_control" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/badge" android:layout_width="UNKNOWN_DATA_0x2001" android:layout_height="UNKNOWN_DATA_0x2001" android:scaleType="fitCenter" />
        <FrameLayout android:id="@+id/info_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/metadata_container" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:ellipsize="marquee" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:fontFamily="sans-serif-light" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" />
                <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="?unknown_attr_ref: 1010038" android:ellipsize="marquee" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/artist_album" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" />
            </LinearLayout>
            <RelativeLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/transient_seek" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content">
                <SeekBar android:id="@+id/transient_seek_bar" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget_TransportControl_SeekBar" />
                <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textSize="12dp" android:id="@+id/transient_seek_time_elapsed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/transient_seek_bar" android:layout_alignParentStart="true" />
                <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textSize="12dp" android:id="@+id/transient_seek_time_remaining" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/transient_seek_bar" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp">
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageButton android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btn_prev" android:background="?unknown_attr_ref: 101030e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_previous" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/keyguard_accessibility_transport_prev_description" />
            </FrameLayout>
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageButton android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btn_play" android:background="?unknown_attr_ref: 101030e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_play" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/keyguard_accessibility_transport_play_description" />
            </FrameLayout>
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageButton android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btn_next" android:background="?unknown_attr_ref: 101030e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_next" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/keyguard_accessibility_transport_next_description" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</com.cyngn.keyguard.KeyguardTransportControlView>
